--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "dart-sass": "^1.25.0",
     "nuxt": "^2.15.8",
+    "nuxt-property-decorator": "^2.9.1",
+    "sass": "^1.47.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
