--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "d3": "^7.3.0",
     "dart-sass": "^1.25.0",
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
@@ -28,6 +29,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@types/d3": "^7.1.0",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0"
